# api_kids_shop

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  data.json  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  ruff.toml  setup.cfg
.github/workflows/: main.yml
api/: admin.py  apps.py  filters.py  models.py  repository.py  serializers.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py  0002_alter_category_options.py  0002_alter_category_options_alter_product_male.py  0002_category_product_category.py  0002_initial.py  0003_alter_product_discount.py  0003_alter_product_male.py  0003_product_age_product_color_product_size_and_more.py  0003_section_alter_category_name_category_section.py  0004_alter_category_options_alter_favorite_options_and_more.py  0004_order_promocode_orderedproduct_order_promocode.py  0004_product_color_product_size_shoppingcart_favorite_and_more.py  0005_brand_product_item_number_product_section_and_more.py  0006_product_is_sale.py  0007_discount_product_discount.py  0008_color_country_alter_brand_options_and_more.py  0008_color_remove_product_color_product_color.py  0009_alter_product_color.py  0009_size_letter_size.py  0010_alter_favorite_product_alter_favorite_user_and_more.py  0010_alter_product_age_alter_product_brand_and_more.py  0011_alter_brand_options_alter_category_options_and_more.py  0011_alter_picture_product_image.py  (+13 more)
data/: a.text  goods.csv  section_asecsories  section_choose  section_clothes.csv  test_goods.csv
kids_shop/: asgi.py  logger.py  permissions.py  settings.py  urls.py  wsgi.py
nginx/: default.conf
users/: admin.py  apps.py  mixins.py  models.py  serializers.py  signals.py  urls.py  users_repository.py  utils.py  validators.py  views.py
(+64 files in other folders)
