[tool.poetry]
name = "api-kids-shop"
version = "0.1.0"
description = ""
authors = ["DmitryTok <moon0939110824@gmail.com>"]
readme = "README.md"
packages = [{include = "api_kids_shop"}]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
