[tool.poetry]
name = "api_kids_shop"
version = "0.1.0"
description = "Kids online shop"
authors = ["DmitryTok <moon0939110824@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-cors-headers = "^4.2.0"
django-filter = "^23.3"
djoser = "^2.2.0"
drf-extra-fields = "^3.7.0"
drf-spectacular = "^0.26.4"
install = "^1.3.5"
isort = "^5.12.0"
pillow = "^10.0.1"
pipdeptree = "^2.13.0"
pre-commit = "^3.4.0"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"
wheel = "^0.41.2"
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".mypy_cache",
    ".ruff_cache",
    "venv",
    "management",
    "migrations",
    "media",
]

line-length = 120

